Revision history for Perl extension Exception::Class::DBI.

0.98

0.97  2008-05-05T19:10:05
        - Updated copyright.
        - Added a link to the Subversion repository.
        - Fixed test failures on Perl 5.6.2.

0.96  2007-10-26T19:01:36
        - Fixed test failure due to the change in value of $dbh->err in DBI
          1.601. First reported by Andreas J. König; fix suggested by Tim
          Bunce.
        - Added the "configure_requires", and "recommends" parameters to
          Build.PL.
        - Updated the POD test to properly make use of Test::POD 1.20 or
          newer.

0.95  2006-07-18T22:14:41
        - Fixed test failure for localized error messages. Reported by Jens
          Maier with a fix from Daniel Brook.
        - Updated tests to use is($foo, $bar) instead of ok($foo == $bar)
          Spotted by Andy Lester.

0.94  2006-06-30T00:04:32
        - The handler() method now always returns the same code referernce
          each time it's called for a given subclass. This behavior prevents
          the DBI connect_cached() method from caching a new database handle
          every time it's called, which could otherwise be pretty annoying.

0.93  2006-06-10T02:09:14
        - Reformatted some of the code and documentation so that it's
          easier to read.
        - Added 'handle' attribute to store the DBI handle for which the
          exception was thrown.
        - Switched to explicit accessors that reach in to the cached database
          handle stored. Suggested by Tim Bunce ages ago!
        - Added support for subclassing Exception::Class::DBI and its
          subclasses.

0.92  2004-06-17T17:42:37
        - Fixed test that was breaking with newer versions of DBI.

0.91  Tue Aug 26 02:25:56 2003
        - Switched to Module::Build.
        - Throwing exceptions with the "throw()" method, rather than
          die'ing with the construction of exceptions with the "new()"
          constructor.
        - Added POD tests.
